--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.24",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
