--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.563.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.54.1",
