--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
     - name: Build and Export
       run: |
         npm run build
+        mkdir -p out
         touch out/.nojekyll
 
     - name: Deploy to server
